crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__paused_child_entry_narrow.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0        ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                  $0.00
 ──────────────────────────
 ? 0   ! 0   ⏸︎ 1   ✓ 0   ⢿

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⏸︎ claude                  ▐
▌  @firm-lane: usage limit ▐
▌  ▢ ────────────────    0%▐
▌  ▤ 0                     ▐
▌  ⧉ 2                     ▐
▌    ⏸︎ review · usage limit▐
▌                     ◔  1m▐
▌    ⣾ build · hidden task ▐
▌                     ◔ <1m▐






 ──────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 $0.00

                 ? for help
