crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__pending_wakes_line.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 0   ☾ 1   ○ 0

 ⑂ main
 ☾ claude
   wake in 12m
   ▢ ──────────────────────────────────────────    0%
   ▤ 0
   ⧉ subagents (1) · ⧖ waits (2)                $0.42





 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
