crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__pipeline_narrow.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 2            $0.00
 ────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓

▎⑂ pipeline ┄┄┄┄┄┄┄┄┄🮇
▎  Implement 47m  47m🮇
▌⣾ planner           ▐
▌  —                 ▐
▌  ▢ ──────────    0%▐
▌  ▤ 0               ▐
▎⣾ coder             🮇
▎  —                 🮇
▎  ▢ ──────────    0%🮇
▎  ▤ 0               🮇


 ────────────────────
  W: ◎ 0  ◇ 0 ↘ $0.00
  M: ◎ 0  ◇ 0 ↘ $0.00

           ? for help
