crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__pipeline_nerd_font.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
▎ pipeline ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▎  forge ● ● ◉ Implement 4h12m ○ ○              4h51m🮇
▌⣾ planner                                           ▐
▌  —                                                 ▐
▌  󱇙 ──────────────────────────────────────────    0%▐
▌  󰿦 0                                               ▐
▎⣾ coder                                             🮇
▎  —                                                 🮇
▎  󱇙 ──────────────────────────────────────────    0%🮇
▎  󰿦 0                                               🮇
